1단계 - 리팩터링(상품) (#177)
* refactor(#step1): 상품 등록 API Spec 용도 model 추가

(cherry picked from commit e00e8b9aa05ad12cea555c1e429591265cf3cae2)

* refactor(#step1): 상품 가격 변경 API Spec 용도 model 추가

(cherry picked from commit 60fe5deda5c4662ae32967cc172ba914a6dc7946)

* refactor(#step1): 상품 목록 조회 API Spec 용도 model 추가

(cherry picked from commit e810de30a1ebf47b5a305064bb03b22b68ad05de)

* refactor(#step1): 상품 관련 전술적 설계 리팩토링

(cherry picked from commit 4f806e91dc2e05181f990bddba8f91be74fff15d)

* fix(#step1): 상품 가격 변경 기능 관련 수정

* test(#step1): 상품 관련 API 테스트 스크립트, http status 확인하도록 수정

* refactor(#step1): 상품 관련 domain service, repository 수정

* refactor(#step1): 상품 관련 application, domain service 수정

* fix(#step1): ProductChangePriceRequest 클래스 관련 jackson 이슈 수정

* refactor(#step1): 상품의 가격이 변경될 때 메뉴의 가격이 메뉴에 속한 상품 금액의 합보다 크면 메뉴가 숨겨지는 기능 관련 수정

* refactor(#step1): 외부 API 구현체 도메인 외부 패키지로 이동

* test(#step1): 상품 domain service 관련 테스트 코드 추가

* test(#step1): 상품 domain aggregate 관련 테스트 코드 추가

* refactor(#step1): 상품 관련 JPA repository 패키징 분리